--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+</head>
+<body>
+    <h1>Hellow Yololoy!</h1>
+</body>
+</html>
+
+
