--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+    <title>Yololoy</title>
+    <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
 </head>
 <body>
     <h1>Hellow Yololoy!</h1>
