--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
 </head>
 <body>
-    <h1>Hellow Yololoy!</h1>
+    <div class="ui text container">
+        <div class="ui text menu">
+            <div class="item">
+                <div style="width:120px" class="ui small image">
+                    <img class="" src="images/logo.png"/>
+                </div>
+            </div>
+        </div>
+        <div class="ui vertical center aligned segment">
+            <h2 class="ui header">Curated list of tracks and trails, seen as never before.</h2>
+        </div>
+    </div>
 </body>
 </html>
 
