landing with video and map

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <title>Yololoy</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <div class="ui text container">
+
+    <div class="ui container">
+
         <div class="ui text menu">
             <div class="item">
                 <div style="width:120px" class="ui small image">
@@ -14,10 +17,46 @@
                 </div>
             </div>
         </div>
-        <div class="ui vertical center aligned segment">
-            <h2 class="ui header">Curated list of tracks and trails, seen as never before.</h2>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="ui vertical center aligned segment slogan borderless">
+            <h1 style="font-size:36px;" class="ui header">Curated list of tracks and trails, seen as never before.</h1>
         </div>
+
+        <div class="ui vertical center aligned segment borderless">
+            <button class="ui yellow button">Longboard</button>
+            <button class="ui brown button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Mountain Bike</button>
+            <button class="ui teal button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Hiking</button>
+            <button class="ui orange button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Walking</button>
+        </div>
+
+        <div class="ui vertical center aligned segment borderless">
+            <iframe style="vertical-align: top;" width="320" height="180" src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA"  frameborder="0"></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/0DNSW0hYEmY" frameborder="0" allowfullscreen></iframe>
+        </div>
+
     </div>
+
+    <!--<div class="ui text container">
+        <iframe src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA" width="320" height="180"></iframe>
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/0DNSW0hYEmY" frameborder="0" allowfullscreen></iframe>
+    </div>-->
+    <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="js/semantic.min.js"></script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-80984543-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
 
