responsive buttons and facebook page link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
 <head>
     <title>Yololoy</title>
+
+    <!-- Standard Meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+
+    <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -16,6 +25,9 @@
                     <img class="" src="images/logo.png"/>
                 </div>
             </div>
+            <div class="right menu">
+                <a class="item" href="https://facebook.com/goyololoy" target="_blank"><i class="big facebook icon"></i> GoYololoy</a>
+            </div>
         </div>
 
         <br>
@@ -26,12 +38,28 @@
             <h1 style="font-size:36px;" class="ui header">Curated list of tracks and trails, seen as never before.</h1>
         </div>
 
-        <div class="ui vertical center aligned segment borderless">
-            <button class="ui yellow button">Longboard</button>
-            <button class="ui brown button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Mountain Bike</button>
-            <button class="ui teal button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Hiking</button>
-            <button class="ui orange button opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Walking</button>
+        <br>
+        <br>
+        <br>
+
+        <div class="ui stackable seven column centered grid">
+            <div class="top aligned row">
+                <div class="column">
+                    <button class="ui yellow button fluid">Longboard</button>
+                </div>
+                <div class="column">
+                    <button class="ui brown button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Mountain Bike</button>
+                </div>
+                <div class="column">
+                    <button class="ui teal button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Hiking</button>
+                </div>
+                <div class="column">
+                    <button class="ui orange button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Walking</button>
+                </div>
+            </div>
         </div>
+
+        <br>
 
         <div class="ui vertical center aligned segment borderless">
             <iframe style="vertical-align: top;" width="320" height="180" src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA"  frameborder="0"></iframe>
