--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
 
         <br>
 
-        <div class="ui vertical center aligned segment borderless">
-            <iframe style="vertical-align: top;" width="320" height="180" src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA"  frameborder="0"></iframe>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/0DNSW0hYEmY" frameborder="0" allowfullscreen></iframe>
+        <div class="ui stackable eight column centered grid">
+            <div class="eight wide tablet six wide computer column">
+                <iframe style="vertical-align: top;" width="320" height="180" src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA"  frameborder="0"></iframe>
+            </div>
+            <div class="eight wide tablet nine wide computer column video">
+                <iframe src="https://www.youtube.com/embed/0DNSW0hYEmY" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
-
     </div>
 
-    <!--<div class="ui text container">
-        <iframe src="https://www.google.com/maps/d/embed?mid=19OYb66yOZjph9ypLpuADZPCE1DA" width="320" height="180"></iframe>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/0DNSW0hYEmY" frameborder="0" allowfullscreen></iframe>
-    </div>-->
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/semantic.min.js"></script>
 
