--- a/index.html
+++ b/index.html
@@ -43,20 +43,18 @@
         <br>
 
         <div class="ui stackable seven column centered grid">
-            <div class="top aligned row">
-                <div class="column">
+                <div class="three wide tablet column">
                     <button class="ui yellow button fluid">Longboard</button>
                 </div>
-                <div class="column">
+                <div class="three wide tablet column">
                     <button class="ui brown button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Mountain Bike</button>
                 </div>
-                <div class="column">
+                <div class="three wide tablet column">
                     <button class="ui teal button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Hiking</button>
                 </div>
-                <div class="column">
+                <div class="three wide tablet column">
                     <button class="ui orange button fluid opacity-45" data-tooltip="Coming soon" data-inverted="" data-variation="mini">Walking</button>
                 </div>
-            </div>
         </div>
 
         <br>
